[project]
name = "openml-server-api"
version = "0.0.1"
authors = [
  { name="Pieter Gijsbers" },
]
description = "The Python-based REST API for OpenML."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "sqlalchemy",
    "mysqlclient",
    "aiomysql",
    "python_dotenv",
    "xmltodict",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "httpx",
    "hypothesis",
    "deepdiff",
    "pytest-xdist",
]
docs = [
    "mkdocs-material",
    "mkdocs-section-index",
]

[project.urls]
"Homepage" = "https://github.com/openml/server-api"
"Bug Tracker" = "https://github.com/openml/server-api/issues"

[tool.coverage.run]
branch=true

[tool.coverage.report]
show_missing=true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# The D (doc) and DTZ (datetime zone) lint classes current heavily violated - fix later
select = ["ALL"]
ignore = [
    "CPY",  # we do not require copyright in every file
    "D",  # todo: docstring linting
    "D203",
    "D204",
    "D213",
    "DTZ", # To add
    # Linter does not detect when types are used for Pydantic
    "TC001",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [ "S101", "COM812", "D"]
"src/core/conversions.py" = ["ANN401"]

[tool.mypy]
strict = true
plugins = [
    "pydantic.mypy"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
markers = [
    "slow: test or sets of tests which take more than a few seconds to run.",
    # While the `mut`ation marker below is not strictly necessary as every change is
    # executed within transaction that is rolled back, it can halt other unit tests which
    # whose queries may depend on the execution or rollback of the transaction.
    "mut: executes a mutation on the database (in a transaction which is rolled back)",
]
filterwarnings = [
    'ignore:A private pytest class or function was used.:DeprecationWarning:tests.conftest:',
]
