[project]
name = "openml-server-api"
version = "0.0.1"
authors = [
  { name="Pieter Gijsbers" },
]
description = "The Python-based REST API for OpenML."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "loguru",
    "cryptography",
    "pydantic",
    "uvicorn",
    "sqlalchemy",
    "mysqlclient",
    "aiomysql",
    "python_dotenv",
    "xmltodict",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest-cov",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "httpx",
    "asgi-lifespan",
    "hypothesis",
    "deepdiff",
    "pytest-xdist",
]
docs = [
    "mkdocs-material",
    "mkdocs-section-index",
]

[project.urls]
"Homepage" = "https://github.com/openml/server-api"
"Bug Tracker" = "https://github.com/openml/server-api/issues"

[tool.coverage.run]
branch=true

[tool.coverage.report]
show_missing=true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# The D (doc) and DTZ (datetime zone) lint classes current heavily violated - fix later
select = ["ALL"]
ignore = [
    "CPY",  # we do not require copyright in every file
    "D203",
    "D204",
    "D213",
    # Linter does not detect when types are used for Pydantic
    "TC001",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "COM812", "D"]
"src/config.py" = ["D100", "D101", "D102", "D103"]
"src/core/access.py" = ["D100", "D101", "D102", "D103"]
"src/core/conversions.py" = ["ANN401", "D100", "D101", "D102", "D103"]
"src/core/errors.py" = ["D100", "D101", "D102", "D103"]
"src/core/formatting.py" = ["D100", "D101", "D102", "D103"]
"src/database/datasets.py" = ["D100", "D101", "D102", "D103"]
"src/database/evaluations.py" = ["D100", "D101", "D102", "D103"]
"src/database/flows.py" = ["D100", "D101", "D102", "D103"]
"src/database/qualities.py" = ["D100", "D101", "D102", "D103"]
"src/database/setup.py" = ["D100", "D101", "D102", "D103"]
"src/database/studies.py" = ["D100", "D101", "D102", "D103"]
"src/database/tasks.py" = ["D100", "D101", "D102", "D103"]
"src/database/users.py" = ["D100", "D101", "D102", "D103"]
"src/main.py" = ["D100", "D101", "D102", "D103"]
"src/routers/dependencies.py" = ["D100", "D101", "D102", "D103"]
"src/routers/mldcat_ap/dataset.py" = ["D100", "D101", "D102", "D103"]
"src/routers/openml/datasets.py" = ["D100", "D101", "D102", "D103"]
"src/routers/openml/estimation_procedure.py" = ["D100", "D101", "D102", "D103"]
"src/routers/openml/evaluations.py" = ["D100", "D101", "D102", "D103"]
"src/routers/openml/flows.py" = ["D100", "D101", "D102", "D103"]
"src/routers/openml/qualities.py" = ["D100", "D101", "D102", "D103"]
"src/routers/openml/study.py" = ["D100", "D101", "D102", "D103"]
"src/routers/openml/tasks.py" = ["D100", "D101", "D102", "D103"]
"src/routers/openml/tasktype.py" = ["D100", "D101", "D102", "D103"]
"src/routers/types.py" = ["D100", "D101", "D102", "D103"]
"src/schemas/core.py" = ["D100", "D101", "D102", "D103"]
"src/schemas/datasets/__init__.py" = ["D100", "D101", "D102", "D103"]
"src/schemas/datasets/convertor.py" = ["D100", "D101", "D102", "D103"]
"src/schemas/datasets/dcat.py" = ["D100", "D101", "D102", "D103"]
"src/schemas/datasets/mldcat_ap.py" = ["D100", "D101", "D102", "D103"]
"src/schemas/datasets/openml.py" = ["D100", "D101", "D102", "D103"]
"src/schemas/flows.py" = ["D100", "D101", "D102", "D103"]
"src/schemas/study.py" = ["D100", "D101", "D102", "D103"]

[tool.mypy]
strict = true
mypy_path = "src"
plugins = [
    "pydantic.mypy"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    # We exclude PHP tests because they are quite slow to begin with.
    "slow: python-only test or sets of tests which take more than 0.1 second to run.",
    # While the `mut`ation marker below is not strictly necessary as every change is
    # executed within transaction that is rolled back, it can halt other unit tests
    # whose queries may depend on the execution or rollback of the transaction.
    "mut: executes a mutation on the database (even when it is cleaned up).",
    # *_api markers included for documentation, should not be added manually.
    "py_api: requests the py_api fixture. Added automatically.",
    "php_api: requests the php_api fixture. Added automatically.",
]
filterwarnings = [
    'ignore:A private pytest class or function was used.:DeprecationWarning:tests.conftest:',
]
